HP-208: Fixed the copy blurb visibility/position when at mobile and desktop size

--- a/site/assets/css/_sass/components/ebook-list.scss
+++ b/site/assets/css/_sass/components/ebook-list.scss
@@ -1,11 +1,18 @@
-.ebooks-list__copy {
-  margin: 5rem 0;
-}
-
 .ebooks-list__col {
   margin-bottom: 6rem;
+}
 
-  @media screen and (max-width: $screen-lg) {
+@media screen and (max-width: $screen-lg) {
+  .ebooks-list__col {
     margin-bottom: 2.5rem;
   }
+
+  .filter-sort-btns {
+    margin: 0;
+  }
+  .ebooks-list__filter-sort-btns {
+    margin-bottom: 5rem;
+  }
 }
+
+
